Add styling to structure

--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
             </div>
         </div>
         <div class="form-panel">
-            <div class="statement">
-                This is not a real online service! You know you need something like this in your life
-                to help you realize your deepest dreams. Sign up <em>now</em> to get started.
+            <div class="statement-container">
+                <p>
+                    This is not a real online service! You know you need something like this in your life
+                    to help you realize your deepest dreams. Sign up <em>now</em> to get started.
+                    <br><br> You know you want to.
+                </p>
             </div>
             <div class="form-container">
+                <h3>Lets do this!</h3>
                 <form action="#" id="sign-up-form">
                     <div>
                         <label for="first-name">FIRST NAME</label>
@@ -49,7 +53,7 @@
                     </div>
                 </form>
             </div>
-            <div class="button-content">
+            <div class="button-container">
                 <button type="submit" form="sign-up-form">Create Account</button>
             </div>
         </div>
