--- a/index.html
+++ b/index.html
@@ -20,41 +20,52 @@
                 <p>
                     This is not a real online service! You know you need something like this in your life
                     to help you realize your deepest dreams. Sign up <em>now</em> to get started.
-                    <br><br> You know you want to.
+                    <br><br> You <em>know</em> you want to.
                 </p>
             </div>
             <div class="form-container">
-                <h3>Lets do this!</h3>
+                <h3>Let's do this!</h3>
                 <form action="#" id="sign-up-form">
-                    <div>
-                        <label for="first-name">FIRST NAME</label>
-                        <input type="text" id="first-name" name="first-name">
-                    </div>
+                    <div class="form-column">
+                        <div class="input-div">
+                            <label for="first-name">FIRST NAME</label>
+                            <input type="text" id="first-name" name="first-name">
+                        </div >
 
-                    <div>
-                        <label for="last-name">LAST NAME</label>
-                        <input type="text" id="last-name" name="last-name">
+                        <div class="input-div">
+                            <label for="email">EMAIL</label>
+                            <input type="email" id="email" name="email">
+                        </div>
+
+                        <div class="input-div">
+                            <label for="password">PASSWORD</label>
+                            <input type="password" id="password" name="password" required>
+                        </div>
                     </div>
-                    <div>
-                        <label for="email">EMAIL</label>
-                        <input type="email" id="email" name="email">
-                    </div>
-                    <div>
-                        <label for="phone-number">PHONE NUMBER</label>
-                        <input type="tel" id="phone-number" name="phone-number">
-                    </div>
-                    <div>
-                        <label for="password">PASSWORD</label>
-                        <input type="password" id="password" name="password">
-                    </div>
-                    <div>
-                        <label for="confirm-pwd">CONFIRM PASSWORD</label>
-                        <input type="password" id="confirm-pwd" name="confirm-pwd">
+                    <div class="form-column">
+                        <div class="input-div">
+                            <label for="last-name">LAST NAME</label>
+                            <input type="text" id="last-name" name="last-name">
+                        </div>
+                        
+                        <div class="input-div">
+                            <label for="phone-number">PHONE NUMBER</label>
+                            <input type="tel" id="phone-number" name="phone-number">
+                        </div>
+                        
+                        <div class="input-div">
+                            <label for="confirm-pwd">CONFIRM PASSWORD</label>
+                            <input type="password" id="confirm-pwd" name="confirm-pwd" required>
+                        </div>
                     </div>
                 </form>
             </div>
             <div class="button-container">
                 <button type="submit" form="sign-up-form">Create Account</button>
+                <div>
+                    Already have an account? 
+                    <a href="">Log in</a>
+                </div>
             </div>
         </div>
     </div>
